\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
%% some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.8-0 (2014-01-31)}{

\subsection{SYNOPSIS}{
  \itemize{
    \item \code{hhh4()} fits now have class \code{"hhh4"} instead of
    \code{"ah4"}, for consistency with \code{twinstim()},
    \code{twinSIR()}, and to follow the common convention (cp. \code{lm()}).
    Standard S3-methods for the old \code{"ah4"} name are still
    available for backwards compatibility but may be removed in the future.
  }
}
  
\subsection{NEW FEATURES}{
  \itemize{
    \item \code{oneStepAhead()}:
    \itemize{
      \item New argument \code{type} with a new \code{type}
      \code{"first"} to base all subsequent one-step-ahead predictions
      on a single initial fit. 
      \item Nicer interpretation of \code{verbose} levels, and
      \code{txtProgressBar()}. 
    }

    \item New \code{data("measlesWeserEms")}, a corrected version of
    \code{data("measles.weser")}.

    \item The \code{plot()}-method for fitted \code{hhh4()} objects now
    offers two additional types of plots: component seasonality and maps
    of estimated random intercepts. It is documented and more customizable.
    Note that argument order and some names have changed:
    \code{i} -> \code{units}, \code{title} -> \code{names}.

    \item (Deviance) \code{residuals()}-method for fitted \code{hhh4()}
    models.

    \item New predefined spatial interaction functions for \code{twinstim()}:
    \code{siaf.student()} implements a \eqn{t}-kernel, and
    \code{siaf.step()} a step function.

    \item New predefined temporal interaction function for \code{twinstim()}:
    \code{tiaf.step()} implements a step function.

    \item \code{siaf.powerlaw()}'s integration over polygonal domains in
    the \code{F} and \code{Deriv} components is much faster and more